# animals-suite

./: .gitignore  .npmrc  ABRIR_EXECUTOR_PREVIEW.bat  ABRIR_PREVIEW.bat  AJUSTE_MUSICAS_ANEXADAS_1.0.1.md  ATUALIZAR_E_COMPILAR.bat  COMPILAR_INSTALADOR.bat  CONFIGURAR_GITHUB_PRIMEIRA_VEZ.bat  CORRIGIR_E_TESTAR_NPM.bat  GERAR_CHAVES_ATUALIZADOR.bat  GUIA_ANIMAIS_AGUA_E_OXIGENIO.md  GUIA_ATUALIZACOES_GITHUB.md  GUIA_GITHUB_ATUALIZACOES_PASSO_A_PASSO.md  GUIA_IMPORTACAO_MECANICAS_IA.md  GUIA_RAPIDO_VERSAO_0.9.0.md  GUIA_SISTEMAS_18-06.md  LEIA-ME-ANTES-DE-PUBLICAR.txt  LEIA-ME-CORRECAO-1.0.13.txt  LEIA-ME-CORRECAO-1.0.14.txt  LEIA-ME_CORRECAO_PUBLICACAO.txt  MUDANCAS_VERSAO_0.10.0.md  MUDANCAS_VERSAO_0.11.0.md  MUDANCAS_VERSAO_0.12.0.md  MUDANCAS_VERSAO_0.13.0.md  MUDANCAS_VERSAO_0.9.0.md  MUDANCAS_VERSAO_0.9.1.md  MUDANCAS_VERSAO_1.0.0.md  MUDANCAS_VERSAO_1.0.1.md  MUDANCAS_VERSAO_1.1.0.md  PUBLICAR_ATUALIZACAO_GITHUB.bat  README.md  README_PT-BR.md  RELATORIO_AJUSTE_MUSICAS_1.0.1.md  RELATORIO_ETAPA_1_SUITE.md  RELATORIO_ETAPA_2_SUITE.md  RELATORIO_ETAPA_3_SUITE.md  RELATORIO_ETAPA_4_SUITE.md  RELATORIO_ETAPA_FINAL_SUITE.md  RELATORIO_VALIDACAO.txt  RELATORIO_VALIDACAO_VERSAO_0.10.0.txt  (+11 more)
scripts/: Configurar-GitHub-Primeira-Vez.ps1  Gerar-Chaves-Atualizador.ps1  Instalar-Dependencias-e-Compilar.ps1  Publicar-Atualizacao-GitHub.ps1  generate-updater-config.mjs  import-guide-content.mjs  sync-suite-manifest.mjs  validate-final.mjs  validate-stage1.mjs  validate-stage2.mjs  validate-stage3.mjs  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+422 files in other folders)
