[package]
name = "animals-suite"
version = "1.0.1"
description = "Suite integrada de planejamento e execução do projeto Animals"
authors = ["Guilherme"]
edition = "2021"

[lib]
name = "animals_planejador_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"
tauri-plugin-updater = "2"
url = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_System_Console"] }
